--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en" ng-app="myApp">
 <head>
     <meta charset="UTF-8">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
     <script src="app.js"></script>
     <title>Angular Services Twitter Handles</title>
 </head>
 <body ng-controller="MyController">
-    <div>
-        <p>You're new Twitter name is @{{adj}}_{{noun}}.</p>
-    </div>
+<div class = 'twitter col-md-10 col-md-offset-1'>
+    <h1 class="well"ng-repeat = "name in twitter">@<a href="http://twitter.com\{{name}}\">{{name}}</h1>
+</div>
 
 </body>
 </html>
